[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/UI/Horizontal-round.png" type="Texture" id=1]
[ext_resource path="res://Sprites/UI/Arrow.png" type="Texture" id=2]
[ext_resource path="res://Scripts/UI/HorizontalComboBox.gd" type="Script" id=3]
[ext_resource path="res://UI/Animations/UI_HorizontalComboBox_Right.tres" type="Animation" id=4]
[ext_resource path="res://UI/Animations/UI_HorizontalComboBox_Left.tres" type="Animation" id=5]

[node name="HorizontalComboBox" type="MarginContainer"]
margin_right = 504.0
margin_bottom = 56.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="NinePatchRect" parent="."]
self_modulate = Color( 0.847059, 0.847059, 0.847059, 1 )
margin_right = 504.0
margin_bottom = 62.0
texture = ExtResource( 1 )
patch_margin_left = 30
patch_margin_top = 30
patch_margin_right = 30
patch_margin_bottom = 30
axis_stretch_vertical = 1

[node name="Margin" type="MarginContainer" parent="."]
margin_right = 504.0
margin_bottom = 62.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="HBox" type="HBoxContainer" parent="Margin"]
margin_left = 4.0
margin_top = 4.0
margin_right = 500.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftArrow" type="MarginContainer" parent="Margin/HBox"]
margin_right = 36.0
margin_bottom = 54.0
rect_min_size = Vector2( 36, 54 )
rect_pivot_offset = Vector2( 18, 27 )

[node name="Center" type="CenterContainer" parent="Margin/HBox/LeftArrow"]
margin_right = 36.0
margin_bottom = 54.0

[node name="LeftArrow" type="Button" parent="Margin/HBox/LeftArrow/Center"]
self_modulate = Color( 0.72549, 0, 0, 0.564706 )
margin_top = 1.0
margin_right = 36.0
margin_bottom = 53.0
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 4
enabled_focus_mode = 0
icon = ExtResource( 2 )
flat = true

[node name="Label" type="MarginContainer" parent="Margin/HBox"]
margin_left = 40.0
margin_right = 456.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Margin/HBox/Label"]
margin_top = 8.0
margin_right = 416.0
margin_bottom = 46.0
custom_colors/font_color = Color( 0, 0, 0, 0.501961 )
text = "Option 1"
align = 1
valign = 1

[node name="RightArrow" type="MarginContainer" parent="Margin/HBox"]
margin_left = 460.0
margin_right = 496.0
margin_bottom = 54.0
rect_min_size = Vector2( 36, 54 )
rect_pivot_offset = Vector2( 18, 27 )

[node name="Center" type="CenterContainer" parent="Margin/HBox/RightArrow"]
margin_right = 36.0
margin_bottom = 54.0

[node name="RightArrow" type="Button" parent="Margin/HBox/RightArrow/Center"]
self_modulate = Color( 0.72549, 0, 0, 0.564706 )
margin_top = 1.0
margin_right = 36.0
margin_bottom = 53.0
rect_pivot_offset = Vector2( 18, 0 )
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 4
enabled_focus_mode = 0
icon = ExtResource( 2 )
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/UI_HorizontalComboBox_Left = ExtResource( 5 )
anims/UI_HorizontalComboBox_Right = ExtResource( 4 )
[connection signal="pressed" from="Margin/HBox/LeftArrow/Center/LeftArrow" to="." method="_on_LeftArrow_pressed"]
[connection signal="pressed" from="Margin/HBox/RightArrow/Center/RightArrow" to="." method="_on_RightArrow_pressed"]
